[tool.poetry]
name = "sprite-ai"
version = "1.4.1"
description = "Sprite AI is an AI companion for your desktop"
authors = ["Caio D <caiobd@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
langchain = "^0.2.0"
llama-cpp-python = {extras = ["server"], version = "^0.2.75"}
dbus-python = "^1.3.2"
plyer = "^2.1.0"
platformdirs = "^4.0.0"
progressbar2 = "^4.2.0"
loguru = "^0.7.2"
typer = "^0.9.0"
pyqt5 = "5.15.2"
transformers = "^4.37.1"
texteditor = "^1.4.1"
faster-whisper = "^0.10.0"
pyaudio = "^0.2.14"
pyqtkeybind = "^0.0.9"
sounddevice = "^0.4.6"
piper-tts = "^1.2.0"
openwakeword = "^0.6.0"
soundfile = "^0.12.1"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.7"

langchain-together = "^0.1.2"
[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.2.0"
mypy = "^0.991"
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sprite-ai = "sprite_ai.main:main"